--- a/app/templates/change_password.html
+++ b/app/templates/change_password.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <input id="password" name="password" type="password" class="validate" required>
-                    <label for="password">Current Password</label></span>
+                    <label for="password">Current Password</label>
                 </div>
             </div>
             <!-- new password -->
