--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -44,7 +44,7 @@
 
     <!-- about us -->
     <div class="center-align">
-        <button class="blue-txt about-us text-shadow hoverable" id="about-us-btn">
+        <button class="about-us text-shadow hoverable" id="about-us-btn">
             About Us!
         </button>
     </div>
