--- a/app/templates/update_event.html
+++ b/app/templates/update_event.html
@@ -15,7 +15,7 @@
                 <!-- category -->
                 <div class="row padd-top">
                     <div class="input-field col s8">
-                        <select id="event_category" name="event_category" class="validate" required>
+                        <select id="event_category" name="event_category" class="validate" size="10" required>
                             <option value="{{ event.event_category }}">{{ event.event_category }}</option>
                             <option value="Playground">Playground</option>
                             <option value="Play date">Play date</option>
