--- a/app/templates/delete_profile.html
+++ b/app/templates/delete_profile.html
@@ -30,7 +30,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <input id="password" name="password" type="password" class="validate" required>
-                    <label for="password">Password</label></span>
+                    <label for="password">Password</label>
                 </div>
             </div>
             <!-- Delete Profile -->
