--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -18,7 +18,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <input id="password" name="password" type="password" class="validate" required>
-                    <label for="password">Password</label></span>
+                    <label for="password">Password</label>
                 </div>
             </div>
             <!-- submit -->
