--- a/app/templates/change_password.html
+++ b/app/templates/change_password.html
@@ -21,7 +21,7 @@
                         pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!#%*?&]{8,30}$" required>
                     <label for="new_password">New Password</label>
                     <span class="helper-text valign-wrapper">
-                        <span class="material-icons">error_outline</span>
+                        <span class="material-icons" aria-hidden="true">error_outline</span>
                         Password must have at least 8 characters, letters (upper and lower-case),
                         numbers and special character: <br>
                         (@ $ ! % * # ? &)
@@ -36,7 +36,7 @@
                         required>
                     <label for="new_conf_password">Confirm New Password</label>
                     <span class="helper-text valign-wrapper">
-                        <span class="material-icons">error_outline</span>Passwords must match
+                        <span class="material-icons" aria-hidden="true">error_outline</span>Passwords must match
                     </span>
                 </div>
             </div>
@@ -45,7 +45,7 @@
                 <div class="col12 center-align">
                     <button class="btn waves-effect waves-light blue-bg white-txt submit-btn" type="submit">Change password</button>
                     <a href="{{ url_for('users.profile', username=session['user']) }}" 
-                        class="btn waves-effect waves-light red-bg white-txt cancel-btn">Cancel</a>
+                        class="btn waves-effect waves-light red-bg black-txt cancel-btn">Cancel</a>
                 </div>
             </div>
         </form>
