--- a/app/templates/events.html
+++ b/app/templates/events.html
@@ -21,7 +21,7 @@
                     <button class="btn waves-effect waves-light blue-bg white-txt submit-btn"
                         type="submit">Search</button>
                     <a href="{{ url_for('events.browse_events') }}"
-                        class="btn waves-effect waves-light red-bg white-txt cancel-btn">Reset</a>
+                        class="btn waves-effect waves-light red-bg black-txt cancel-btn">Reset</a>
                 </div>
             </div>
         </form>
@@ -52,7 +52,7 @@
                     <button class="btn waves-effect waves-light blue-bg white-txt submit-btn small-btn"
                         type="submit">Apply</button>
                     <a href="{{ url_for('events.browse_events') }}"
-                        class="btn waves-effect waves-light red-bg white-txt cancel-btn small-btn">Reset</a>
+                        class="btn waves-effect waves-light red-bg black-txt cancel-btn small-btn">Reset</a>
                 </div>
             </div>
         </form>
