--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -356,8 +356,8 @@
     <div class="row center-align">
         <div class="col s12">
             <a class="btn red-bg cancel-btn delete-profile-btn" href="{{ url_for('users.delete_profile') }}">
-                <span class="valign-wrapper">
-                    Delete Profile <span class="material-icons">delete_forever</span>
+                <span class="valign-wrapper black-txt">
+                    Delete Profile <span class="material-icons" aria-hidden="true">delete_forever</span>
                 </span>
             </a>
         </div>
