--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -27,7 +27,7 @@
                     <input id="email" name="email" type="email" class="validate" required>
                     <label for="email">Email</label>
                     <span class="helper-text valign-wrapper">
-                        <span class="material-icons">error_outline</span>Email must be unique
+                        <span class="material-icons" aria-hidden="true">error_outline</span>Email must be unique
                     </span>
                 </div>
             </div>
@@ -36,9 +36,9 @@
                 <div class="input-field col s12">
                     <input id="username" name="username" type="text" class="validate" minlength="2" maxlength="20"
                         pattern='^[a-zA-Z0-9"]{2,20}$' required>
-                    <label for="last_name">Username</label>
+                    <label for="username">Username</label>
                     <span class="helper-text valign-wrapper">
-                        <span class="material-icons">error_outline</span>Username is case sensitive and must be unique
+                        <span class="material-icons" aria-hidden="true">error_outline</span>Username is case sensitive and must be unique
                     </span>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                         autocomplete="new-password" required>
                     <label for="password">Create Password</label>
                     <span class="helper-text valign-wrapper">
-                        <span class="material-icons">error_outline</span>
+                        <span class="material-icons" aria-hidden="true">error_outline</span>
                         Password must have at least 8 characters, letters (upper and lower-case),
                         numbers and special character: (@ $ ! % * # ? &)
                     </span>
@@ -64,7 +64,7 @@
                         autocomplete="new-password" required>
                     <label for="conf_password">Confirm Password</label>
                     <span class="helper-text valign-wrapper">
-                        <span class="material-icons">error_outline</span>Passwords must match
+                        <span class="material-icons" aria-hidden="true">error_outline</span>Passwords must match
                     </span>
                 </div>
             </div>
