--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -26,7 +26,7 @@
                 <div class="col12 center-align">
                     <button class="btn waves-effect waves-light blue-bg white-txt submit-btn" type="submit">
                         <span class="valign-wrapper">
-                            Enter <span class="material-icons">login</span>
+                            Enter <span class="material-icons" aria-hidden="true">login</span>
                         </span>
                     </button>
                 </div>
