--- a/app/templates/update_profile.html
+++ b/app/templates/update_profile.html
@@ -27,7 +27,7 @@
                     <input id="email" name="email" type="email" class="validate" value="{{ user.email }}" required>
                     <label for="email">Email</label>
                     <span class="helper-text valign-wrapper">
-                        <span class="material-icons">error_outline</span>Email must be unique
+                        <span class="material-icons" aria-hidden="true">error_outline</span>Email must be unique
                     </span>
                 </div>
             </div>
@@ -36,9 +36,9 @@
                 <div class="input-field col s12">
                     <input id="username" name="username" type="text" class="validate" minlength="2" maxlength="20"
                         pattern='^[a-zA-Z0-9"]{2,20}$' value="{{ user.username }}" required>
-                    <label for="last_name">Username</label>
+                    <label for="username">Username</label>
                     <span class="helper-text valign-wrapper">
-                        <span class="material-icons">error_outline</span>Username is case sensitive and must be unique
+                        <span class="material-icons" aria-hidden="true">error_outline</span>Username is case sensitive and must be unique
                     </span>
                 </div>
             </div>
@@ -54,7 +54,7 @@
                 <div class="col12 center-align">
                     <button class="btn waves-effect waves-light blue-bg white-txt submit-btn" type="submit">Update</button>
                     <a href="{{ url_for('users.profile', username=session['user']) }}" 
-                        class="btn waves-effect waves-light red-bg white-txt cancel-btn">Cancel</a>
+                        class="btn waves-effect waves-light red-bg black-txt cancel-btn">Cancel</a>
                 </div>
             </div>
         </form>
